terraform/arch/terraform-middle/dev/45-eks-setting/standard/service/webtest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: testweb-app
  name: testweb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testweb-app
  template:
    metadata:
      labels:
        app: testweb-app
    spec:
      containers:
        - image: symjaehyun/springhelloterra:1.0
          name: testweb
          ports:
            - containerPort: 8080
          #env:
          #  - name: profile
          #    value: "eks"
