terraform/arch/terraform-middle/dev/45-eks-setting/standard/service/webtest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webtest-service
  labels:
    name: webtest-service
spec:
  ports:
    - name: server
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: webtest-app
