terraform/arch/terraform-middle/dev/45-eks-setting/standard/service/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: msa-maker-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - webtest.azjaehyun.shop
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - webtest.azjaehyun.shop
    port:
      name: https-443
      number: 443
      protocol: HTTP
