terraform/arch/terraform-middle/dev/45-eks-setting/standard/service/all-v2.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: web-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - "*"
    port:
      name: https-443
      number: 443
      protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web-virtualservice
  namespace: default
spec:
  gateways:
  - web-gateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: web-service.default.svc.cluster.local
        port:
          number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: default
  labels:
    name: web-service
spec:
  ports:
    - name: server
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: web-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    app: web-app
  name: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - image: umanking/docker-example:0.0.1
          name: web
          ports:
            - containerPort: 8080
          #env:
          #  - name: profile
          #    value: "eks"
